# mywebapp

./: .gitignore  Cargo.toml  README.md  Vagrantfile  config.yml
crates/app/: Cargo.toml
crates/app/src/: controllers.rs  main.rs  models.rs  repository.rs  views.rs
crates/migrator/: Cargo.toml
crates/migrator/src/: main.rs
scripts/: setup.sh
